Some fixes for router paths.
